--- a/ApolloWidget.xcframework/Info.plist
+++ b/ApolloWidget.xcframework/Info.plist
@@ -6,12 +6,13 @@
 	<array>
 		<dict>
 			<key>LibraryIdentifier</key>
-			<string>ios-arm64</string>
+			<string>ios-arm64_arm64e</string>
 			<key>LibraryPath</key>
 			<string>ApolloWidget.framework</string>
 			<key>SupportedArchitectures</key>
 			<array>
 				<string>arm64</string>
+				<string>arm64e</string>
 			</array>
 			<key>SupportedPlatform</key>
 			<string>ios</string>
